Fix overflow on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -131,7 +131,7 @@ a {
 }
 
 // fix for weird x overflow (maybe because of .stretch)
-html {
+html, body {
   overflow-x: hidden;
 }
 
